testsuite/tests/ghc-regress/rename/should_compile/rn019.hs
module Silly (
	Array.accum
  ) where
import qualified Array
