testsuite/tests/ghc-regress/rename/should_fail/T3792.hs
module T3792 where

import Prelude( Prelude.map )	-- Illegal

